changed index title and fixed overflow on smaller screen

--- a/presentation/src/App.css
+++ b/presentation/src/App.css
@@ -68,7 +68,7 @@ header{
 }
 
 .fullScreen {
-  height: 100vh; 
+  min-height: 100vh; 
   align-items:center;
   display:grid;
 }
